--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="{{ site.url }}" class="btn">Accueil</a>
+        <a href="{{ site.baseurl }}" class="btn">Accueil</a>
         <a href="{{ site.about_page }}" class="btn">Whoami</a>
       {% endif %}
       {% if site.show_downloads %}
