try adding button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.baseurl }}" class="btn">Accueil</a>
         <a href="{{ site.url }}{{ site.baseurl }}/{{ site.about_page }}" class="btn">Whoami</a>
+        <a href="{{ site.github_link }}" class="btn">Github</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
